--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,13 @@
 }
 
 .login-container {
-  background-color: #fffacd;
+  background-color: #782f77;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(45, 11, 45, 0.1);
   max-width: 400px;
   width: 100%;
   margin: 0 auto; /* Center it horizontally */
 }
+h1 {
+  justify-content: center;}
